Fixed icon resizing bug on IE8. Aww yiss.

--- a/css/style.less
+++ b/css/style.less
@@ -14,7 +14,7 @@
 @offblacktoyellow : #1C1C1B;
 @mustard : #dbb900;
 
-
+img { height: auto !important } 
  #map_geolocation img { max-height: none; max-width: none; }
 
 *, *:before, *:after {
@@ -415,15 +415,15 @@ box-shadow: 0px 0px 5px @gray;
                                         }
                                     }
                                 .bottomDiv{
-                        
-                    
                                     font-size:14px;
                                     line-height:14px;
                                     float:left;
                                     clear:left;
                                     img{
+                                        display:block;
                                         float:left;
                                         width:140px;
+                                        height:140px;
                                         margin-right: 5px;
                                         margin-bottom:5px;
                                         border:5px solid @black;
@@ -438,7 +438,7 @@ box-shadow: 0px 0px 5px @gray;
                                             overflow: hidden;
                                         }
                                     .text{
-                         
+                                     //margin-bottom:15px;
                                     font-size:14px;
                                     line-height:14px;
                                         clear:both;
@@ -1016,9 +1016,6 @@ box-shadow: 0px 0px 5px @gray;
     background-color: pink;
 }*/
            #map-canvas { 
-                #map_geolocation label { width: auto; display:inline; }
-                #map_geolocation img { max-height: none; max-width: none; }
-
                       #sidebarChunk{
                       display:none;
                       }
